log
Wed 08 May 2024 05:40:00 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
b3e5478
Wed 08 May 2024 05:42:35 PM UTC: 
 treemap.c | 43 ++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 42 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
02ffc54
Wed 08 May 2024 05:44:56 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  7|6
total_score: 5/70
ba8e9df
Wed 08 May 2024 05:46:36 PM UTC: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
9305e74
Wed 08 May 2024 05:53:27 PM UTC: 
 treemap.c | 44 ++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 42 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:134:24: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  134 |             TreeNode * child;
      |                        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
da77e39
Wed 08 May 2024 05:54:31 PM UTC: 
 treemap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  15|5
total_score: 20/70
47a0fec
